--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <script src="assets/js/bootstrap-notify.js" type="text/javascript"></script>
 
 <!--  Google Maps Plugin    -->
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBpWBlQCzcc-sg9LLZKKKhKOt91tXOYQb8"></script>
+<!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBpWBlQCzcc-sg9LLZKKKhKOt91tXOYQb8"></script>-->
 
 <script src="https://code.angularjs.org/2.0.0-beta.0/http.dev.js"></script>
 <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
